feat: add error responses to the api
